[gd_scene load_steps=6 format=2]

[ext_resource path="res://strand/Node/node_material.tres" type="Material" id=1]
[ext_resource path="res://strand/Node/Node.gd" type="Script" id=2]
[ext_resource path="res://strand/Node/NodeText.tscn" type="PackedScene" id=3]

[sub_resource type="SphereShape" id=1]
radius = 1.027

[sub_resource type="ViewportTexture" id=2]
flags = 4
viewport_path = NodePath("Viewport")

[node name="Node" type="Spatial"]
script = ExtResource( 2 )

[node name="Area" type="Area" parent="."]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 200, 200 )
transparent_bg = true
gui_disable_input = true

[node name="NodeText" parent="Viewport" instance=ExtResource( 3 )]

[node name="Viewport3D" type="Sprite3D" parent="."]
transform = Transform( 2.69655, 0, 0, 0, 2.69655, 0, 0, 0, 0.5, -0.00922346, 0.64373, 0.00590944 )
flip_v = true
billboard = 1
texture = SubResource( 2 )

[node name="Sphere" type="CSGSphere" parent="."]
radius = 0.25
radial_segments = 25
rings = 25
material = ExtResource( 1 )

[connection signal="input_event" from="Area" to="." method="_on_Area_input_event"]
[connection signal="mouse_entered" from="Area" to="." method="_on_Area_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_Area_mouse_exited"]
